<resources>
    <string name="app_name">Teeveet</string>

    <string name="teeveet_prod_api_url" translatable="false">https://jesunmaailma.ml/livetv-cms/api.php</string>
    <string name="teeveet_dev_api_url" translatable="false">http://jesunmaailma.tk/livetv-cms/api.php</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string name="read_more" translatable="false">Lue lisää Jesun Maailma -tilistä</string>

    <string name="email" translatable="false">Sähköpostiosoite <font color="#FF03DAC5">*</font></string>
    <string name="password" translatable="false">Salasana <font color="#FF03DAC5">*</font></string>
    <string name="birth_year" translatable="false">Syntymävuosi <font color="#FF03DAC5">*</font></string>
    <string name="first_name" translatable="false">Etunimi <font color="#FF03DAC5">*</font></string>
    <string name="last_name" translatable="false">Sukunimi <font color="#FF03DAC5">*</font></string>

    <!-- Preference Titles -->
    <string name="theme_title" translatable="false">Sovelluksen teema</string>
    <string name="title_activity_settings" translatable="false">Asetukset</string>
    <string name="open_source" translatable="false">Avoimen lähdekoodin ohjelmiston käyttöluvat</string>
    <string name="open_source_title" translatable="false">Sovelluksen lähdekoodi</string>

    <!-- Summary text -->
    <string name="show_open_source" translatable="false">Näytä avoimen lähdekoodin ohjelmiston käyttöluvat.</string>
    <string name="open_source_summary" translatable="false">Tämän valinnan painaminen avaa GitHubin ja näyttää miten tämä sovellus on tehty.</string>

    <!-- Header titles -->
    <string name="general_header" translatable="false">Yleiset</string>
    <string name="other_header" translatable="false">Muut</string>
    <string name="app_info_header" translatable="false">Tietoa sovelluksesta</string>
    <string name="version_title" translatable="false">Versio</string>
    <string name="example_summary" translatable="false">Versio tulee tähän.</string>

    <string name="legal_information" translatable="false">Juridiset tiedot</string>
    <string name="terms_of_service_summary" translatable="false">Näytä käyttöehdot.</string>
    <string name="terms_of_service" translatable="false">Käyttöehdot</string>
    <string name="privacy_policy" translatable="false">Tietosuojakäytäntö</string>
    <string name="privacy_policy_summary" translatable="false">Näytä tietosuojakäytäntö.</string>

    <string name="copyright">Copyright</string>
    <string name="example_summary_2">Tekijänoikeus tulee tähän.</string>
</resources>